Ensure images appear on 404 #385

--- a/public/404.html
+++ b/public/404.html
@@ -173,10 +173,10 @@
       <footer>
         <div class="grid-x grid-padding-x" id="logos">
           <div class="cell small-12 medium-6 small-text-center medium-text-right">
-            <a href="http://cd2h.org/"><img class="logo" src="images/CD2H_logo.png"></a>
+            <a href="http://cd2h.org/"><img class="logo" src="/images/CD2H_logo.png"></a>
           </div>
           <div class="cell small-12 medium-6 small-text-center medium-text-left">
-            <a href="http://nucats.northwestern.edu/"><img class="logo" src="images/CATS-gradient.png"></a>
+            <a href="http://nucats.northwestern.edu/"><img class="logo" src="/images/CATS-gradient.png"></a>
           </div>
         </div>
         <div class="grid-x grid-padding-x text-center">
