--- a/public/404.html
+++ b/public/404.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Competitions - Page Not Found</title>
+    <title>Page Not Found</title>
     <style>
       html { box-sizing: border-box; font-size: 100%; line-height: 1.15; -webkit-text-size-adjust: 100%; }
       body { margin: 0; }
@@ -136,22 +136,6 @@
   <body>
     <div class="grid-container">
       <div class="grid-x grid-margin-x grid-margin-y">
-        <header class="cell">
-          <div class="top-bar">
-            <div class="top-bar-left">
-              <ul class="menu">
-                <li>
-                  <div class="home">
-                    <a href="/">CD2H - Competitions</a>
-                  </div>
-                </li>
-              </ul>
-            </div>
-            <div class="top-bar-right"></div>
-          </div>
-        </header>
-      </div>
-      <div class="grid-x grid-margin-x grid-margin-y">
         <main class="cell" style="min-height: 30em;">
           <div class="grid-x align-center-middle">
             <div class="section-intro">
@@ -170,26 +154,6 @@
         </main>
       </div>
       <div class="grid-x grid-margin-x grid-margin-y">
-      <footer>
-        <div class="grid-x grid-padding-x" id="logos">
-          <div class="cell small-12 medium-6 small-text-center medium-text-right">
-            <a href="http://cd2h.org/"><img class="logo" src="/images/CD2H_logo.png"></a>
-          </div>
-          <div class="cell small-12 medium-6 small-text-center medium-text-left">
-            <a href="http://nucats.northwestern.edu/"><img class="logo" src="/images/CATS-gradient.png"></a>
-          </div>
-        </div>
-        <div class="grid-x grid-padding-x text-center">
-          <div class="cell small-12">
-            <p>
-              Competitions is powered by the Northwestern University Clinical and Translational Sciences Institute (<a href="http://nucats.northwestern.edu/">NUCATS</a>) and is supported in part by the National Institutes of Health<br>
-              (NCATS UL1TR001422 and U24TR002306)
-            </p>
-            </p>
-            <p><a href="mailto:competitions-cd2h@northwestern.edu">competitions-cd2h@northwestern.edu</a></p>
-          </div>
-        </div>
-      </footer>
     </div>
     </div>
   </body>
